--- a/topic1.html
+++ b/topic1.html
@@ -20,7 +20,7 @@
               <span class="icon-bar"></span>                        
             </button>
             <div class="toggle" onclick="history.back()">
-                <img src="/back.png" style="width:25px;height:25px;"/>
+                <img src="back.png" style="width:25px;height:25px;"/>
                 </div>
             <a class="navbar-brand" href="index.html">Mobile App In Networking</a>
           </div>
