--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
               <span class="icon-bar"></span>                        
             </button>
             <div class="toggle" onclick="history.back()">
-                <img src="/back.png" style="width:25px;height:25px;"/>
+                <img src="back.png" style="width:25px;height:25px;"/>
                 </div>
             <a class="navbar-brand" href="index.html">Mobile App In Networking</a>
           </div>
@@ -53,7 +53,7 @@
       <br>
       <header>
 
-        <img class="logo" src="/22.png" alt="avatar" width="250" height="250" ></a>
+        <img class="logo" src="22.png" alt="avatar" width="250" height="250" ></a>
 
         <h1 style="text-align:center;">CONTACT US</h1>
     </header>
