--- a/topic2.html
+++ b/topic2.html
@@ -20,7 +20,7 @@
               <span class="icon-bar"></span>                        
             </button>
             <div class="toggle" onclick="history.back()">
-              <img src="/back.png" style="width:25px;height:25px;"/>
+              <img src="back.png" style="width:25px;height:25px;"/>
               </div>
             <a class="navbar-brand" href="index.html">Mobile App In Networking</a>
           </div>
@@ -82,7 +82,7 @@
       </div>
       <div class="container">
         <h2>NIC CARD</h2>
-        <img class="img-responsive" src="/nic card.jpg" alt="nic" width="460" height="345">
+        <img class="img-responsive" src="nic card.jpg" alt="nic" width="460" height="345">
       </div>
       <br>
       <div class="container">
@@ -94,7 +94,7 @@
       </div>
       <div class="container">
         <h2>HUB</h2>
-        <img class="img-responsive" src="/hub.jpg" alt="hub" width="460" height="345">
+        <img class="img-responsive" src="hub.jpg" alt="hub" width="460" height="345">
       </div>
       <div class="container">
         <p><strong>Switch</strong></p>
@@ -106,8 +106,8 @@
       </div>
       <div class="container">
         <h2>SWITCH</h2>
-        <img class="img-responsive" src="/switch.png" alt="switch" width="460" height="345">
-        <img class="img-responsive" src="/switch area.png" alt="area" width="460" height="345">
+        <img class="img-responsive" src="switch.png" alt="switch" width="460" height="345">
+        <img class="img-responsive" src="switch area.png" alt="area" width="460" height="345">
       </div>
       <br>
       <div class="container">
@@ -117,10 +117,10 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-4">
-            <img class="img-responsive" src="/modem1.jpg" alt="modem1">
+            <img class="img-responsive" src="modem1.jpg" alt="modem1">
           </div>
           <div class="col-xs-4">
-            <img class="img-responsive" src="/modem3.jpg" alt="modem3">
+            <img class="img-responsive" src="modem3.jpg" alt="modem3">
           </div>
         </div>
       </div>
@@ -135,13 +135,13 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-4">
-            <img class="img-responsive" src="/router 1.jpg" alt="router1">
+            <img class="img-responsive" src="router 1.jpg" alt="router1">
           </div>
           <div class="col-xs-4">
-            <img class="img-responsive" src="/router2.png" alt="router2">
+            <img class="img-responsive" src="router2.png" alt="router2">
           </div>
           <div class="col-xs-4">
-            <img class="img-responsive" src="/router3.jpg" alt="router3">
+            <img class="img-responsive" src="router3.jpg" alt="router3">
           </div>
         </div>
       </div>
@@ -156,13 +156,13 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-4">
-            <img class="img-responsive" src="/repeater1.jpg" alt="repeater1">
+            <img class="img-responsive" src="repeater1.jpg" alt="repeater1">
           </div>
           <div class="col-xs-4">
-            <img class="img-responsive" src="/repeater2.jpg" alt="repeater2">
+            <img class="img-responsive" src="repeater2.jpg" alt="repeater2">
           </div>
           <div class="col-xs-4">
-            <img class="img-responsive" src="/repeater3.jpeg" alt="repeater3">
+            <img class="img-responsive" src="repeater3.jpeg" alt="repeater3">
           </div>
         </div>
       </div>
@@ -173,7 +173,7 @@
     <p>&copy; 2023 PHILIPPINE COLLEGE OF NORTHWESTERN LUZON (BSIT-III). All rights reserved.</p>
   </footer>
 
-  <button class="back-to-top" onclick="scrollToTop()"><img src="/pngegg(11).png" width="25px" alt="Back to Top"></button>
+  <button class="back-to-top" onclick="scrollToTop()"><img src="pngegg(11).png" width="25px" alt="Back to Top"></button>
 
 </body>
 </html>
