--- a/topic3.html
+++ b/topic3.html
@@ -20,7 +20,7 @@
               <span class="icon-bar"></span>                        
             </button>
             <div class="toggle" onclick="history.back()">
-              <img src="/back.png" style="width:25px;height:25px;"/>
+              <img src="back.png" style="width:25px;height:25px;"/>
               </div>
             <a class="navbar-brand" href="index.html">Mobile App In Networking</a>
           </div>
@@ -59,7 +59,7 @@
       <div class="container">
         <p><strong>Twisted-Pair Cables</strong></p>
         <li>If the pair of wires are not twisted, electromagnetic noises from, e.g., motors, will affect the closer wire more than the further one, thereby causing errors.</li>
-        <img class="img-responsive" src="/UTP-Cable-Picture.jpg" alt="utp" width="300" height="100" style="align-items: center;">
+        <img class="img-responsive" src="UTP-Cable-Picture.jpg" alt="utp" width="300" height="100" style="align-items: center;">
       </div>
       <br>
       <div class="container">
@@ -120,6 +120,6 @@
       <footer>
         <p>&copy; 2023 PHILIPPINE COLLEGE OF NORTHWESTERN LUZON (BSIT-III). All rights reserved.</p>
       </footer>
-      <button class="back-to-top" onclick="scrollToTop()"><img src="/pngegg(11).png" width="25px" alt="Back to Top"></button>
+      <button class="back-to-top" onclick="scrollToTop()"><img src="pngegg(11).png" width="25px" alt="Back to Top"></button>
 </body>
 </html>
