--- a/topic4.html
+++ b/topic4.html
@@ -20,7 +20,7 @@
               <span class="icon-bar"></span>                        
             </button>
             <div class="toggle" onclick="history.back()">
-                <img src="/back.png" style="width:25px;height:25px;"/>
+                <img src="back.png" style="width:25px;height:25px;"/>
                 </div>
             <a class="navbar-brand" href="index.html">Mobile App In Networking</a>
           </div>
@@ -157,10 +157,10 @@
      <div class="container">
       <div class="row">
         <div class="col-xs-4">
-          <img class="img-responsive" src="/OSI Model.jpg" alt="OSI">
+          <img class="img-responsive" src="OSI Model.jpg" alt="OSI">
         </div>
         <div class="col-xs-4">
-          <img class="img-responsive" src="/OSI-7-layers.jpg" alt="OSI">
+          <img class="img-responsive" src="OSI-7-layers.jpg" alt="OSI">
         </div>
       </div>
      </div>
@@ -215,12 +215,12 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-4">
-          <img src="/OSIlayers.jpg" alt="layers" width=280 height=200>
+          <img src="OSIlayers.jpg" alt="layers" width=280 height=200>
         </div>
       </div>
     </div>
 
-    <button class="back-to-top" onclick="scrollToTop()"><img src="/pngegg(11).png" width="25px" alt="Back to Top"></button>
+    <button class="back-to-top" onclick="scrollToTop()"><img src="pngegg(11).png" width="25px" alt="Back to Top"></button>
 </br>
 </br></br></br></br>
     <footer>
