--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <br>
     <header>
 
-        <img class="logo" src="/22.png" alt="avatar" width="250" height="250" ></a>
+        <img class="logo" src="22.png" alt="avatar" width="250" height="250" ></a>
 
         <h1 style="text-align:center;">MOBILE EDUCATIONAL APP IN NETWORKING</h1>
     </header>
