--- a/Video.html
+++ b/Video.html
@@ -55,13 +55,13 @@
         <h1 style="text-align:center;">Video Tutorials</h1>
     </header>
     <div class="container">
-    <button class="centered-button btn-block btn-lg">Straight Through Cable</button>
+    <button class="centered-button btn-block btn-lg"><a href="vid1.html">Straight Through Cable</a></button>
     </div><br>
     <div class="container">
-        <button class="centered-button btn-block btn-lg">Crossover Cable</button>
+        <button class="centered-button btn-block btn-lg"><a href="vid2.html>Crossover Cable</a></button>
     </div><br>
     <div class="container">
-        <button class="centered-button btn-block btn-lg">Connect Computer to Router</button>
+        <button class="centered-button btn-block btn-lg"><a href="vid3.html">Connect Computer to Router</a></button>
      </div></br>
     </br></br></br></br>
 
