--- a/Video.html
+++ b/Video.html
@@ -58,7 +58,7 @@
     <button class="centered-button btn-block btn-lg"><a href="vid1.html">Straight Through Cable</a></button>
     </div><br>
     <div class="container">
-        <button class="centered-button btn-block btn-lg"><a href="vid2.html>Crossover Cable</a></button>
+        <button class="centered-button btn-block btn-lg"><a href="vid2.html">Crossover Cable</a></button>
     </div><br>
     <div class="container">
         <button class="centered-button btn-block btn-lg"><a href="vid3.html">Connect Computer to Router</a></button>
