--- a/topic1.html
+++ b/topic1.html
@@ -229,6 +229,6 @@
         <p>&copy; 2023 PHILIPPINE COLLEGE OF NORTHWESTERN LUZON (BSIT-III). All rights reserved.</p>
       </footer>
 
-      <button class="back-to-top" onclick="scrollToTop()"><img src="/pngegg(11).png" width="25px" alt="Back to Top"></button>
+      <button class="back-to-top" onclick="scrollToTop()"><img src="pngegg(11).png" width="25px" alt="Back to Top"></button>
 </body>
 </html>
